hphp/hack/test/typecheck/coeffect_encapsulation/bad_constraint.php.exp
ERROR: File "bad_constraint.php", line 6, characters 8-8:
Invalid constraint on `newtype` (Typing[4332])
  File "coeffect/contexts.hhi", line 206, characters 5-40:
  Expected `HH\Capabilities\ImplicitPolicyOf<int>`
  File "coeffect/contexts.hhi", line 76, characters 5-34:
  But got `HH\Capabilities\WriteProperty`
ERROR: File "bad_constraint.php", line 6, characters 8-8:
Invalid constraint on `newtype` (Typing[4332])
  File "coeffect/contexts.hhi", line 206, characters 5-40:
  Expected `HH\Capabilities\ImplicitPolicyOf<int>`
  File "coeffect/contexts.hhi", line 77, characters 5-34:
  But got `HH\Capabilities\AccessGlobals`
ERROR: File "bad_constraint.php", line 6, characters 8-8:
Invalid constraint on `newtype` (Typing[4332])
  File "coeffect/contexts.hhi", line 206, characters 5-40:
  Expected `HH\Capabilities\ImplicitPolicyOf<int>`
  File "coeffect/contexts.hhi", line 78, characters 5-28:
  But got `HH\Capabilities\RxLocal`
ERROR: File "bad_constraint.php", line 6, characters 8-8:
Invalid constraint on `newtype` (Typing[4332])
  File "coeffect/contexts.hhi", line 206, characters 5-40:
  Expected `HH\Capabilities\ImplicitPolicyOf<int>`
  File "coeffect/contexts.hhi", line 79, characters 5-32:
  But got `HH\Capabilities\SystemLocal`
ERROR: File "bad_constraint.php", line 6, characters 8-8:
Invalid constraint on `newtype` (Typing[4332])
  File "coeffect/contexts.hhi", line 206, characters 5-40:
  Expected `HH\Capabilities\ImplicitPolicyOf<int>`
  File "coeffect/contexts.hhi", line 80, characters 5-40:
  But got `HH\Capabilities\ImplicitPolicyLocal`
ERROR: File "bad_constraint.php", line 6, characters 8-8:
Invalid constraint on `newtype` (Typing[4332])
  File "coeffect/contexts.hhi", line 206, characters 5-40:
  Expected `HH\Capabilities\ImplicitPolicyOf<int>`
  File "coeffect/contexts.hhi", line 81, characters 5-23:
  But got `HH\Capabilities\IO`
ERROR: File "bad_constraint.php", line 6, characters 8-8:
Invalid constraint on `newtype` (Typing[4332])
  File "coeffect/contexts.hhi", line 206, characters 5-40:
  Expected `HH\Capabilities\ImplicitPolicyOf<int>`
  File "bad_constraint.php", line 6, characters 8-8:
  But got `(HH\Capabilities\ImplicitPolicyLocal & HH\Capabilities\RxLocal & HH\Capabilities\WriteProperty & HH\Capabilities\AccessGlobals & HH\Capabilities\SystemLocal & HH\Capabilities\IO)`
