hphp/hack/test/typecheck/coeffect_encapsulation/bad_constraint.php
<?hh

<<file:__EnableUnstableFeatures('context_alias_declaration_short')>>

// defaults </: zoned_with
newctx X as [zoned_with<int>];
